<resources>
    <string name="app_name">Wood Meas</string>
    <string name="log_length">Długość kłody</string>
    <string name="log_width">Szerokość kłody</string>
    <string name="default_number">0</string>
    <string name="default_number_float">0,00</string>
    <string name="default_text">Tekst domyślny</string>
    <string name="centimeters_short">cm</string>
    <string name="inch_short">in</string>
    <string name="meters_short">m</string>
    <string name="foot_short">ft</string>
    <string name="meters_decimal_short">m3</string>
    <string name="volume_calculator">Kalkulator miąższości</string>
    <string name="measurement_width_bark">Pomiar z korą</string>
    <string name="wood_packages">Pakiet drewna</string>
    <string name="select">Wybierz</string>
    <string name="create">Utwórz</string>
    <string name="delete">Usuń</string>
    <string name="cancel">Anuluj</string>
    <string name="yes">Tak</string>
    <string name="add_wood_package_name">Wprowadź nazwę pakietu:</string>
    <string name="absence">Brak</string>
    <string name="create_package">Utwórz pakiet</string>
    <string name="created_package">Pakiet został utworzony</string>
    <string name="do_you_want_to_delete_wood_package_from_currency_view">Czy chcesz usunąć pakiet drewna z bieżącego widoku?</string>
    <string name="add_to_wood_package">Dodaj do pakietu</string>
    <string name="added_to_package">Dodano do pakietu</string>
    <string name="select_or_create_wood_package">Wybierz lub stwórz pakiet drewna</string>
    <string name="length_width_log_min_info">Długość oraz szerokość kłody powinna być większa od zera</string>
    <string name="your_wood_packages_list">Twoje pakiety drewna</string>
    <string name="creation_date">Data utworzenia:</string>
    <string name="last_update_date">Data ostatniej modyfikacji</string>
    <string name="count_log">Ilość kłód:</string>
    <string name="sum">Suma:</string>
    <string name="copyright">Copyright Qwerty Media 2021 All rights reserved</string>
    <string name="menu_name_packages">Pakiety drewna</string>
    <string name="menu_name_calculators">Kalkulatory</string>
    <string name="activity_default_name">Activity</string>
    <string name="no_data">Brak danych</string>
    <string name="search">Wyszukaj</string>
    <string name="id">Id</string>
    <string name="package_name">Nazwa Pakietu</string>
    <string name="created_date">Data utworzenia</string>
    <string-array name="menu_calculators">
        <item>Pomiar kłód</item>
        <item>Pomiar tarcicy</item>
        <item>Pomiar stosów</item>
    </string-array>
    <string-array name="menu_packages">
        <item>Pakiety kłód</item>
        <item>Pakiety tarcicy</item>
        <item>Pakiety stosów</item>
    </string-array>
    <string name="delete_package_question">Czy chcesz usunąć pakiet?</string>
    <string name="package_has_been_removed">Pakiet został usunięty</string>
    <string name="package_is_empty">Pakiet jest pusty</string>
    <string name="remove_all_packages">Usuń pakiety</string>
    <string name="delete_all_packages_question">Czy chcesz usunąć wszystkie pakiety?</string>
    <string name="length">Długość</string>
    <string name="width">Szerokość</string>
    <string name="thickness">Grubość</string>
    <string name="_3">3</string>
    <string name="add_to_package">+ Dodaj do pakietu</string>
    <string name="hold_down_to_add">Aby dodać przyprzymaj przycisk</string>
    <string name="packages">Pakiet</string>
    <string name="ok">OK</string>
    <string name="enter_all_dimensions">Wprowadź wszystkie wymiary.</string>
    <string name="create_and_use">Utwórz i użyj</string>
    <string name="no_packages">Brak pakietów.</string>
    <string name="print">Drukuj</string>
    <string name="height">Wysokość</string>
    <string name="send">Wyślij</string>
    <string name="do_you_want_delete_element_question">Czy chcesz usunąć element?</string>
    <string name="diameter">Średnica</string>
    <string name="package_details">Zawartość pakietu</string>
    <string name="bark">Kora</string>
    <string name="plank_package">Pakiet tarcicy</string>
    <string name="log_package">Pakiet kłód</string>
    <string name="stack_package">Pakiet stosów</string>
    <string name="cross_stack">Stos krzyżowy</string>
    <string-array name="trees">
        <item>Świerk</item>
        <item>Jodła</item>
        <item>Sosna</item>
        <item>Modrzew</item>
        <item>Brzoza</item>
        <item>Buk</item>
        <item>Grab</item>
        <item>Klon</item>
        <item>Jesion</item>
        <item>Jawor</item>
        <item>Lipa</item>
        <item>Olcha</item>
        <item>Osika</item>
        <item>Topola</item>
        <item>Wiąz</item>
        <item>Dąb</item>
        <item>Akacja</item>
    </string-array>
    <string name="yes_short">T</string>
    <string name="no_short">N</string>
    <string name="length_short_cm">D/CM</string>
    <string name="width_short_cm">S/CM</string>
    <string name="height_short_cm">W/CM</string>
    <string name="diameter_short_cm">Ś/CM</string>
    <string name="m3_short">M3</string>
    <string name="length_short_in">D/IN</string>
    <string name="width_short_in">S/IN</string>
    <string name="height_short_in">W/IN</string>
    <string name="diameter_short_in">Ś/IN</string>
    <string name="ft3_short">FT3</string>
    <string name="cross_short">X</string>
    <string name="bark_short">KORA</string>
    <string name="tree">DRZEWO</string>
    <string name="id_short">ID</string>
    <string name="date_short">DATA</string>
    <string name="thousand">1000</string>
    <string name="plus_10">+10</string>
    <string name="plus_100">+100</string>
    <string name="plus_1000">+1000</string>
    <string name="unit_of_measurement">Jednostki miar</string>
    <string name="unit_measurement_cm_m">cm / m</string>
    <string name="unit_measurement_in_ft">in / ft</string>
    <string name="metric_system">System metryczny</string>
    <string name="imperial_system">System imperialny</string>
    <string name="use_location_info">Użyj swojej lokalizacji podczas tworzenia pakietów.</string>
    <string name="location">lokalizacja</string>
    <string name="location_on">użyj lokalizacji</string>
    <string name="updated">Zaktualizowano</string>
    <string name="apply">zastosuj</string>
    <string name="settings">Ustawienia</string>
    <string name="information">Informacje</string>
    <string name="sortyment">Sortyment</string>
    <string name="float_0_1">0,1</string>
    <string name="custom_factor">Własny współczynnik</string>
    <string name="float_0_0_1">0,01</string>
    <string name="package_notes">Notatki pakietów</string>
    <string name="add_to_emails">Dołączaj do emaili</string>
    <string name="add_to_pdf">Umieszczaj w dokumentach pdf</string>
    <string name="sent_from_app">Wysłano z aplikacji Wood Meas</string>
    <string name="_x1">x1</string>
    <string name="method_measuring_logs">Metoda pomiaru kłód</string>
    <string name="end_diameter_center_diameter">Średnica końcowa / średnica środkowa</string>
    <string name="end_diameter">Średnica końcowa</string>
    <string name="center_diameter">Średnica środkowa</string>
    <string name="slash">/</string>
    <string name="application_description">
        Aplikacja Wood Meas to narzędzie do obliczeń pomiarów, mające zastosowanie w pomiarze kłód drewnianych, tarcicy oraz stosów drewna.
    </string>
    <string name="application_features">Funkcje aplikacji</string>
    <string-array name="application_features_list">
        <item>dokonywanie obliczeń pomiarów kłód drewnianych</item>
        <item>dokonywanie obliczeń pomiarów tarcicy</item>
        <item>dokonywanie obliczeń pomiarów stosów drewna</item>
        <item>tworzenie pakietów kłód, tarcicy oraz stosów</item>
        <item>generowanie raportów dla pakietów w formie arkuszy kalkulacyjnych (xls) oraz dokumentów pdf</item>
        <item>przeliczanie wielkości pakietów na jednostki monetarne</item>
        <item>dokonywanie obliczeń pomiarów w systemie metrycznym oraz imperialnym</item>
        <item>tworzenie notatek dla pakietów</item>
    </string-array>
    <string name="measurement_logs">A. POMIAR KŁÓD</string>
    <string name="measurement_logs_desc">Obliczenia pomiaru kłód dokonywane są przy zastosowaniu metody ___ (z korą oraz bez kory) oraz ___ (bez kory).</string>
    <string-array name="measurement_logs_swap">
        <item>średnicy środkowej</item>
        <item>średnicy górnej</item>
    </string-array>
    <string name="calculation_methods">Metody obliczeń</string>
    <string name="measurement_plank">B. POMIAR TARCICY</string>
    <string name="measurement_plank_desc">Do obliczeń pomiaru tarcicy używany jest wzór na objętość prostopadłościanu. Pomiarów należy dokonywać bez uwzględniania kory. </string>
    <string name="measurement_stacks">C. POMIAR STOSÓW</string>
    <string name="measurement_stacks_desc">Obliczenia dla pomiarów stosów wykonywane są ze względu na dany sortyment oraz gatunek drewna. Sortymenty przewidziane do obliczeń (współczynniki zamienne dla drewna mierzonego w stosach), to S2, S3, S4, M1, M2.</string>
    <string name="learn_more">[Zobacz więcej]</string>
    <string name="design_and_implementation">Projekt i wykonanie</string>
    <string name="qwertymediacom">www.qwertymedia.com</string>
    <string name="woodmeascom">www.woodmeas.com</string>
</resources>