<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"
            android:text="@string/default_number_float"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"
            android:text="@string/meters_short"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <Button
            android:id="@+id/button4"
            style="@style/ButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rounded_green_medium_bg"
            android:text="@string/add_to_package"
            android:textSize="10sp"
            app:backgroundTint="@color/button_green"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.4"
            android:text="@string/hold_down_to_add"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="6sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:text="@string/packages"
            android:textAllCaps="true"
            android:textColor="@color/wm_other_yellow_1"
            android:textSize="8sp"
            tools:ignore="RtlSymmetry,SmallSp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_yellow_bg"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/oval_gray_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_eye_10_20_yellow" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/absence"
                android:textColor="@color/wm_gray_dark"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="32dp">

            <Button
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create"
                android:textSize="8sp"
                app:backgroundTint="@color/button_green"
                tools:ignore="SmallSp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select"
                android:textSize="8sp"
                app:backgroundTint="@color/button_blue"
                tools:ignore="SmallSp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="8sp"
                app:backgroundTint="@color/button_red"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/linearLayout8"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>