<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolumeCalculatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/volume_calculator"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchTreeBark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measurement_width_bark"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Spinner
                android:id="@+id/spinnerTreesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_length" />

                <TextView
                    android:id="@+id/textViewLengthValueCm"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_number"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/centimeters_short"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textViewLengthValueM"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_number_float"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/meters_short"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarLogLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/max_log_length"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonLengthMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:srcCompat="@drawable/ic_minus_12"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/imageButtonLengthPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:srcCompat="@drawable/ic_plus_12"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_width" />

                <TextView
                    android:id="@+id/textViewWidthValueCm"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_number"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="right|left"
                    android:text="@string/centimeters_short"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textViewWidthValueM"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/default_number_float"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/meters_short"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarLogWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/max_log_width"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonWidthMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:srcCompat="@drawable/ic_minus_12"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/imageButtonWidthPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:srcCompat="@drawable/ic_plus_12"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewResume"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/default_number_float"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/meters_decimal_short" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/add_to_wood_package"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonAddWoodenLog"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp" />

                <ImageButton
                    android:id="@+id/imageButtonAddWoodenLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_plus_12" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/wood_packages" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textViewWoodPackagesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/absence"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickGetWoodPackageDetails"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:srcCompat="@drawable/ic_arrow_right_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="64dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:onClick="onClickBtnSelect"
                    android:text="@string/select" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:onClick="onClickBtnCreate"
                    android:text="@string/create" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:onClick="onClickBtnRemove"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>