<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/sortyment"
            android:textAllCaps="true"
            android:textColor="@color/wm_gray_dark"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <Spinner
            android:id="@+id/spinnerWoodCoefficients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switchCustomFactorOnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/custom_factor"
            android:textSize="10sp"
            tools:ignore="SmallSp,UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textViewCustomFactorValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/float_0_0_1"
            android:textColor="@color/wm_gray_dark"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <SeekBar
            android:id="@+id/seekBarCustomFactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>